Feat-Segunda-clase

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ hs_err_pid*
 /JavaApplication24/nbproject/private/
 /JavaApplication24/build/
 /Practica-D-Luciano/nbproject/private/
+/ParteD-Segunda-Clase-Luciano/nbproject/private/
+ParteD-Segunda-Clase-Luciano/build.xml
+ParteD-Segunda-Clase-Luciano/manifest.mf
+ParteD-Segunda-Clase-Luciano/nbproject/build-impl.xml
+ParteD-Segunda-Clase-Luciano/nbproject/genfiles.properties
+ParteD-Segunda-Clase-Luciano/nbproject/project.properties
+ParteD-Segunda-Clase-Luciano/nbproject/project.xml
